--- a/index.html
+++ b/index.html
@@ -428,8 +428,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-4 gap-3">
-                <button class="btn btn-outline-secondary rounded-circle px-3 py-2">
-                    << /button>
+                <button class="btn btn-outline-secondary rounded-circle px-3 py-2"><</button>
                         <button class="btn btn-outline-secondary rounded-circle px-3 py-2">></button>
             </div>
         </div>
